<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main2" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="Calcular IMC:"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="68dp"
        android:text="Digite seu peso (kg):"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/primeirovalor"
        android:layout_marginTop="54dp"
        android:text="Digite sua altura (m):"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/primeirovalor"
        android:layout_alignRight="@+id/btcalcular"
        android:ems="10"
        android:text="@string/altura"
        android:width="125dp" />

    <EditText
        android:id="@+id/primeirovalor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:text="@string/peso"
        android:width="125dp" />

    <Button
        android:id="@+id/btlimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btvoltar"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/btlimpar"
        android:width="300dp" />

    <Button
        android:id="@+id/btcalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btlimpar"
        android:layout_alignLeft="@+id/btlimpar"
        android:text="@string/btcalcular"
        android:width="300dp" />

    <Button
        android:id="@+id/btvoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btlimpar"
        android:layout_alignParentBottom="true"
        android:text="@string/btvoltar"
        android:width="300dp" />

</RelativeLayout>