<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.maprojects.newproject.Main1" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="41dp"
        android:fontFamily="Comic Sans MS"
        android:gravity="center"
        android:height="100dp"
        android:maxHeight="100dp"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/holo_blue_light"
        android:text="@string/BemVindo"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />
    
    <Button
        android:id="@+id/btcalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="29dp"
        android:text="@string/bttelacalc"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_light"
        android:textSize="23sp"
        android:textStyle="bold"
        android:width="300dp" />

    <Button
        android:id="@string/bttelacalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btcalc"
        android:layout_alignLeft="@+id/btcalc"
        android:layout_alignRight="@+id/btcalc"
        android:text="@string/bttelac"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="23sp"
        android:textStyle="bold" />

</RelativeLayout>