<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calcular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main3" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/somar"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="Calculadora:"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btlimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btvoltar"
        android:text="@string/btlimpar"
        android:width="300dp" />

    <Button
        android:id="@+id/btcalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btlimpar"
        android:text="@string/btcalcular"
        android:width="300dp" />

    <Button
        android:id="@+id/btvoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btlimpar"
        android:layout_alignParentBottom="true"
        android:text="@string/btvoltar"
        android:width="300dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/primeirovalor"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:text="Primeiro Valor:"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btcalcular"
        android:layout_alignParentRight="true" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/somar"
        android:layout_centerVertical="true"
        android:text="Subtrair" />

    <RadioButton
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sub"
        android:layout_alignBottom="@+id/sub"
        android:layout_toRightOf="@+id/textView4"
        android:text="Dividir" />

    <RadioButton
        android:id="@+id/mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/div"
        android:layout_alignLeft="@+id/div"
        android:text="Multiplicar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="31dp"
        android:text="Segundo Valor:"
        android:textSize="15sp" />

    <RadioButton
        android:id="@+id/somar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sub"
        android:layout_alignLeft="@+id/btcalcular"
        android:text="Somar" />

    <EditText
        android:id="@+id/segundovalor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/mult"
        android:layout_marginLeft="28dp"
        android:layout_toLeftOf="@+id/radioGroup1"
        android:ems="10"
        android:width="125dp" />

    <EditText
        android:id="@+id/primeirovalor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/segundovalor"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:width="125dp" />

</RelativeLayout>